--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -680,7 +680,7 @@
 
 /* Modal Popup para mostrar mensaje de éxito */
 
-.contenido-modal-exito {
+.contenido-modal-mensaje {
     display: flex;
     background-color: #fefefe;
     flex-direction: column;
@@ -698,75 +698,52 @@
     transform: translate(-50%, -50%);
 }
 
-.contenido-modal-exito img{
+.contenido-modal-mensaje img{
     width: 75px;
     height: 75px;
 }
 
-.contenido-modal-exito p{
+.contenido-modal-mensaje p{
     font-size: 1.25rem;
 }
 
-.boton-continuar{
-    background-color: rgba(76, 175, 80, 0.9608);
-    color: white;
-    padding: 0.625rem 1.25rem;
-    border: none;
-    border-radius: 3.125rem;
-    font-size: 1rem;
-    cursor: pointer;
+/* Estilos para el modal de carga */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
 }
 
-/* Animación de entrada */
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-/* Modal Popup para mostrar mensaje de Error */
-
-.contenido-modal-error {
-    display: flex;
-    background-color: #fefefe;
-    flex-direction: column;
-    gap: 1.25rem;
-    align-items: center;
-    justify-content: center;
+.contenido-carga {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    max-width: 300px;
     text-align: center;
-    border-radius: 0.625rem;
-    width: 18.75rem;
-    height: 14.0625rem;
-    margin: auto; /* Centrar horizontalmente */
-    position: absolute; /* Centrar verticalmente */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
-.contenido-modal-error img{
-    width: 75px;
-    height: 75px;
+.spinner {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
 }
 
-.contenido-modal-error p{
-    font-size: 1.25rem;
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-.boton-continuar-error{
-    background-color: rgba(236, 109, 109, 0.961);
-    color: white;
-    padding: 0.625rem 1.25rem;
-    border: none;
-    border-radius: 3.125rem;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-/* Animación de entrada */
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
 
 
 @media screen and (max-width: 768px){
