--- a/ortesisWeb/static/css/base/header.css
+++ b/ortesisWeb/static/css/base/header.css
@@ -92,3 +92,19 @@
     border: none; 
     outline: none;
 }
+
+@media (max-width: 770px) and (max-height: 953px) {
+    .modal-notificaciones {
+        top: 200px;
+        left: auto;
+        width: 250px;
+        max-height: 80%;
+        z-index: 1000;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .contenido-notificaciones {
+        width: 100%;
+        max-height: 80%;
+    }
+}
