--- a/administrador/templates/admin_pacientes.html
+++ b/administrador/templates/admin_pacientes.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/listar_pacientes_administrador.css' %}">
 <link rel="stylesheet" href="{% static 'css/tabla.css' %}">
 <link rel="stylesheet" href="{% static 'styles/modal.css' %}">
+<link rel="stylesheet" href="{% static 'styles/carga_masiva.css' %}">
 {% endblock %}
 
 {% block title %}Pacientes{% endblock %}
@@ -26,6 +27,19 @@
         </button>
     </form>
 </div>
+<div id="message-container">
+    {% if messages %}
+    {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+            {{ message }}
+            <button type="button" class="close" onclick="this.parentElement.style.display='none';">&times;</button>
+        </div>
+    {% endfor %}
+    {% endif %}
+</div>
+<button id="boton-carga-masiva" onclick="openPopup()">Carga masiva
+    <img src="{% static 'icons/carga-masiva.svg' %}">
+</button>
 <button id="boton-agregar-paciente">Agregar Paciente
     <img src="{% static 'icons/plus.svg' %}">
 </button>
@@ -166,9 +180,39 @@
     </span>
 </div>
 
+<!-- Carga masiva -->
+<div id="overlay"></div>
+<div id="popup">
+    <h2 id="titulo_carga">Importar usuarios con archivos CSV</h2>
+    <form action="{% url 'carga_masiva_pacientes' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div id="dropzone">
+            <p id="dropzone-message">Arrastra tu archivo o haz click para buscar en tu computador</p>
+            <input type="file" name="archivo_csv" id="archivo_csv" accept=".csv">
+        </div>
+        <a id="plantilla_ejemplo" href="{% url 'archivo_csv_ejemplo' %}">Plantilla CSV de muestra</a>
+        <br><br>
+        <button class="boton_subir" id="subir_carga" type="submit">Subir archivo</button>
+        <button id="closePopup">Cancelar</button>
+    </form>
+</div>
+
 {% endblock %}
 
 {% block extra_js %}
+<script>
+    // Desvanecer los mensajes después de 5 segundos
+    setTimeout(function() {
+        let messages = document.querySelectorAll('#message-container .alert');
+        messages.forEach(function(message) {
+            message.style.transition = 'opacity 0.5s ease';
+            message.style.opacity = '0';
+            setTimeout(function() {
+                message.remove();
+            }, 500);
+        });
+    }, 10000);
+</script>
 
 <script>
     document.getElementById("boton-agregar-paciente").addEventListener("click", function(){
@@ -298,5 +342,6 @@
 </script>
 <script src="{% static 'js/buscar_paciente_recepcionista.js' %}"></script>
 <script src="{% static 'js/filtroListados.js' %}"></script>
+<script src="{% static 'js/carga_masiva.js' %}"></script>
 {% endblock %}
 
